enonic-xp-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: enonic-xp
  labels:
    app: enonic-xp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: enonic-xp
        component: enonic-xp
    spec:
        containers:
           - name: enonic-xp
             image: gcr.io/kubernetes-181111/enonic-xp-image 
             imagePullPolicy: Always
             ports:
             - containerPort: 8080
               name: enonic-xp
               protocol: TCP
             volumeMounts:
             - mountPath: "/xp"
               name: exp-persistent-storage
        volumes:
          - name: exp-persistent-storage
            gcePersistentDisk:
              pdName: enonic-xp-pdisk
              fsType: ext4
