enonic-xp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enonic-xp
  labels:
    app: enonic-xp
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: enonic-xp
