enonic-xp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: enonic-xp-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: xp-diego-cloud-ip
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: enonic-xp-app
spec:
  backend:
    serviceName: enonic-xp
    servicePort: 8080
#  tls:
#    - secretName: xp-diego-cloud-ip-tls
#      hosts:
#      - xp.diego.cloud
